--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,19 @@
         android:theme="@style/Theme.HighKing"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.cust.CustActivity"
+            android:screenOrientation="portrait"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".ui.auth.AuthActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.splashscreen.SplashScreen"
+            android:screenOrientation="portrait"
+            android:exported="true"
+            android:theme="@style/Base.Theme.HighKing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
