--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
 agp = "8.3.0"
+fontawesomeTypeface = "5.9.0.1-kotlin"
+iconicsCore = "5.3.4"
+iconicsCoreVersion = "5.4.0"
+iconicsViews = "4.2.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.0"
 junit = "4.13.2"
@@ -9,11 +13,17 @@ appcompat = "1.6.1"
 material = "1.11.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+materialVersion = "1.4.0"
 navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
+phosphorTypeface = "1.0.0.1-kotlin"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+fontawesome-typeface = { module = "com.mikepenz:fontawesome-typeface", version.ref = "fontawesomeTypeface" }
+iconics-core = { module = "com.mikepenz:iconics-core", version.ref = "iconicsCore" }
+iconics-core-v540 = { module = "com.mikepenz:iconics-core", version.ref = "iconicsCoreVersion" }
+iconics-views = { module = "com.mikepenz:iconics-views", version.ref = "iconicsViews" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -23,6 +33,8 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+material-v140 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+phosphor-typeface = { module = "com.mikepenz:phosphor-typeface", version.ref = "phosphorTypeface" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
