--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         </provider>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDsbvczf_2-MgmpGzxjdrMRZPcatQI4bPA" />
+            android:value="@string/google_maps_key" />
     </application>
 
 </manifest>
